--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <a href="[আপনার Adsterra Direct Link দিন]" target="_blank" class="download-button ad-link">📚PDF ডাউনলোড করুন📚</a>
             <a href="https://drive.google.com/file/d/1JxQ6HYYryTieJusjZJjMrCNWt7Isd3AW/view?usp=sharing" target="_blank" class="download-button">📖 ডাউনলোড করুন 📖</a>
         </div>
-        <p class="disclaimer">**দ্রষ্টব্য:** প্রথম লিংকে ক্লিক করার মাধ্যমে আপনি আমাদের বিজ্ঞাপন পার্টনারদের সাইট ভিজিট করতে পারেন। দ্বিতীয় লিংকটি আপনাকে আসল বইয়ের PDF ফাইলটিতে নিয়ে যাবে।</p>
+        <p class="disclaimer">Thanks for visit</p>
     </div>
 </body>
 </html>
