--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </ul>
 
         <div class="download-buttons">
-            <a href="[আপনার Adsterra Direct Link দিন]" target="_blank" class="download-button ad-link">📚PDF ডাউনলোড করুন📚</a>
+            <a href="https://www.profitableratecpm.com/kmmnjv6pr?key=7c78bdc50316a3ba74b2eb236ed2ee2e" target="_blank" class="download-button ad-link">📚PDF ডাউনলোড করুন📚</a>
             <a href="https://drive.google.com/file/d/1JxQ6HYYryTieJusjZJjMrCNWt7Isd3AW/view?usp=sharing" target="_blank" class="download-button">📖 ডাউনলোড করুন 📖</a>
         </div>
         <p class="disclaimer">Thanks for visit</p>
